--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,37 @@
-matplotlib==3.6.2
-numpy==1.17.4
+aescipher==6.0.0
+certifi==2022.9.24
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==2.1.1
+contourpy==1.0.6
+cryptography==38.0.3
+cycler==0.11.0
+easyrsa==3.1.0
+encryptedsocket==3.0.0
+fonttools==4.38.0
+idna==2.8
+imread==0.7.4
+kiwisolver==1.4.4
+matplotlib==3.2.0
+munch==2.5.0
+numpy==1.23.4
+numpy-stl==2.17.1
+omnitools==0.0.264
+packaging==21.3
+pandas==1.5.1
+Pillow==9.3.0
+pycparser==2.21
+pycryptodome==3.15.0
+pyftpdlib==1.5.7
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-utils==3.4.5
+pytz==2022.6
 requests==2.22.0
 scipy==1.9.3
-setuptools==45.2.0
+six==1.16.0
+text2png==0.5.0
+threadwrapper==0.13.0
+unencryptedsocket==2.2.0
+urllib3==1.25.11
